# nicheflow-studio

./: .env.example  .gitignore  AGENTS.md  PLAN.md  PROMPT.md  README.md  STATUS.md  pyproject.toml  requirements.txt
docs/: DEVELOPMENT.md  INSTALLATION.md  MVP.md
docs/superpowers/plans/: 2026-04-16-sidebar-rail-refresh.md
docs/superpowers/specs/: 2026-04-16-sidebar-rail-design.md
scripts/: build.ps1  check_ai_setup.ps1  dev.ps1  install_local.ps1  run.ps1  run_fresh_packaged.ps1  smoke_packaged.ps1
src/nicheflow_studio/: __main__.py  queue.py
src/nicheflow_studio/app/: app.py  main_window.py
src/nicheflow_studio/core/: env.py  logging.py  media_tools.py  paths.py
src/nicheflow_studio/db/: models.py  session.py
src/nicheflow_studio/downloader/: youtube.py
src/nicheflow_studio/processing/: smart_drafts.py  transcription.py  video.py
src/nicheflow_studio/scraper/: __init__.py  youtube.py
tests/: conftest.py  test_downloader.py  test_env.py  test_main_window.py  test_paths_and_db.py  test_processing.py  test_queue.py  test_scraper.py  test_smart_drafts.py  test_transcription.py
